Added patch api to update status and description.